@@ -7,6 +7,8 @@ import shutil
 import sys
 import tempfile
 import subprocess
+import tarfile
+import re
 from os import path
 
 from beancount.utils import test_utils
@@ -55,7 +57,7 @@ class TestSetup(test_utils.TestCase):
         rootdir = test_utils.find_repository_root(__file__)
 
         # Clean previously built "build" output.
-        command = [sys.executable, path.join(rootdir, 'setup.py'), 'clean', '--all']
+        command = [sys.executable, 'setup.py', 'clean', '--all']
         subprocess_env = os.environ.copy()
         if extra_env:
             subprocess_env.update(extra_env)
@@ -68,8 +70,7 @@ class TestSetup(test_utils.TestCase):
         self.assertEqual(0, pipe.returncode, stderr)
 
         # Install in a temporary directory.
-        command = [sys.executable, path.join(rootdir, 'setup.py'),
-                   'install', '--prefix={}'.format(installdir)]
+        command = [sys.executable, 'setup.py', 'install', '--prefix={}'.format(installdir)]
         subprocess_env = os.environ.copy()
         if extra_env:
             subprocess_env.update(extra_env)
@@ -137,3 +138,30 @@ class TestSetup(test_utils.TestCase):
                                 cwd=rootdir)
         stdout, stderr = pipe.communicate()
         self.assertEqual(0, pipe.returncode, stderr)
+
+    def test_sdist_includes_c_files(self):
+        # Clean previously built "build" output.
+        rootdir = test_utils.find_repository_root(__file__)
+        subprocess.check_call(
+            [sys.executable, 'setup.py', 'sdist', '--dist-dir', self.installdir],
+            cwd=rootdir, shell=False,
+            stdout=subprocess.PIPE, stderr=subprocess.PIPE)
+        files = os.listdir(self.installdir)
+        self.assertEqual(1, len(files))
+        targz = path.join(self.installdir, files[0])
+
+        # Find the set of expected header & C files.
+        exp_filenames = set()
+        for root, dirs, files in os.walk(path.join(rootdir, 'src/python/beancount')):
+            for filename in files:
+                if re.match(r'.*\.[hc]$', filename):
+                    exp_filenames.add(path.join(root[len(rootdir)+1:], filename))
+
+        # Find the set of packaged files in the source distribution.
+        tar = tarfile.open(targz)
+        tar_filenames = set(re.sub('^.*?{}'.format(os.sep, os.sep), '', info.name)
+                            for info in tar
+                            if re.match(r'.*\.[hc]$', info.name))
+
+        # Check that all the expected files are present.
+        self.assertLessEqual(exp_filenames, tar_filenames)
